@@ -1,5 +1,7 @@
 plugins {
     id("java")
+    id("application")
+    id("org.graalvm.buildtools.native") version "0.10.2"
 }
 
 group = "com.panagiotispetridis"
@@ -16,6 +18,26 @@ dependencies {
     implementation("com.google.ortools:ortools-java:9.10.4067")
 }
 
-tasks.test {
-    useJUnitPlatform()
+application {
+    mainClass.set("com.panagiotispetridis.day12.Main")
+}
+
+graalvmNative {
+    toolchainDetection = false
+    binaries {
+        named("main") {
+            imageName.set("day12")
+            fallback.set(false)
+            buildArgs.add("-O3")
+            buildArgs.add("--enable-preview")
+        }
+    }
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf(
+        "-XX:+UseZGC",
+        "-Xms8g",
+        "-Xmx8g"
+    )
 }
